fixed overlapping footer

--- a/src/custom.css
+++ b/src/custom.css
@@ -27,9 +27,14 @@ body {
 @media screen and (max-width: 819px) {
 
   div.app-title {
-    font-size: 70px;
+    font-size: 60px;
     font-weight: lighter;
   }
+}
+
+.list-box {
+  min-height: 200px;
+
 }
 
 .name-list {
